--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,8 @@ jobs:
         scope: 'resourcegroup'
         # Provide the name of a resource group, only required for resource Group deployments.
         resourceGroupName: One
+        # Specify the path or URL to the Azure Resource Manager template.
+        template: https://github.com/MaxYare/One/blob/main/ARM-Templates/container-webapp-template.json
 
     - name: Send greeting
       run: echo "Hello ${{ github.event.inputs.name }}"
