--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ on:
 jobs:
   # This workflow contains a single job called "greet"
   build-and-deploy:
+    env:
+      targetEnv: test
+
 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
