--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,6 @@ jobs:
     env:
       targetEnv: test
 
-
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -46,6 +45,7 @@ jobs:
         resourceGroupName: One
         # Specify the path or URL to the Azure Resource Manager template.
         template: ./ARM-Templates/container-webapp-template.json
+        parameters: webAppName=STARdevops-dev from ARM template>-${{ env.targetEnv }}
 
     - name: Send greeting
       run: echo "Hello ${{ github.event.inputs.name }}"
