--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
         resourceGroupName: One
         # Specify the path or URL to the Azure Resource Manager template.
         template: ./ARM-Templates/container-webapp-template.json
-        parameters: webAppName=STARdevops-dev from ARM template>-${{ env.targetEnv }}
+        parameters: webAppName=STARdevops-${{ env.targetEnv }}
 
     - name: Send greeting
       run: echo "Hello ${{ github.event.inputs.name }}"
