--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
   # This workflow contains a single job called "greet"
   build-and-deploy:
     env:
-      targetEnv: test
+      targetEnv: prod
 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
